# ailist

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  build.py  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build_wheels.yml
ailist/: AIList_core.c  AIList_core.pxd  AIList_core.pyx  IntervalArray_core.c  IntervalArray_core.pxd  IntervalArray_core.py  IntervalArray_core.pyx  Interval_core.c  Interval_core.pxd  Interval_core.pyx  LabeledIntervalArray_core.c  LabeledIntervalArray_core.pxd  LabeledIntervalArray_core.pyx  LabeledInterval_core.c  LabeledInterval_core.pxd  LabeledInterval_core.pyx  __init__.py  ailist.c  ailist.pxd  ailist.pyx  ailist_core.c  ailist_core.pxd  ailist_core.pyx  array_query_core.c  array_query_core.pxd  array_query_core.pyx  array_query_utilities.c  array_query_utilities.h  augmented_interval_list.c  augmented_interval_list.h  radix_interval_sort.c
ailist/src/: aiarray_add.c  aiarray_construct.c  aiarray_coverage.c  aiarray_extract.c  aiarray_filter.c  aiarray_index.c  aiarray_merge.c  aiarray_nhits.c  aiarray_ops.c  aiarray_query.c  aiarray_wps.c  ailist_add.c  ailist_construct.c  ailist_coverage.c  ailist_filter.c  ailist_index.c  ailist_iter.c  ailist_merge.c  ailist_nhits.c  ailist_ops.c  ailist_query.c  ailist_wps.c  array_query_utilities.h  augmented_interval_array.c  augmented_interval_array.h  augmented_interval_list.c  augmented_interval_list.h  interval.c  interval.h  khash.h  labeled_aiarray_add.c  labeled_aiarray_coverage.c  (+19 more)
doc/: README.rst  benchmarking.rst  conf.py  installation.rst  release-notes.rst  tutorial.rst
docs/: Makefile  README.rst  ailist.AIList.add.rst  ailist.AIList.coverage.rst  ailist.AIList.first.rst  ailist.AIList.from_array.rst  ailist.AIList.last.rst  ailist.AIList.range.rst  ailist.AIList.rst  ailist.AIList.size.rst  ailist.AIList.wps.rst  ailist.Interval.end.rst  ailist.Interval.index.rst  ailist.Interval.rst  ailist.Interval.start.rst  ailist.Interval.value.rst  ailist.rst  conf.py  index.rst
tests/: .coverage  benchmark.py  test_AIList.py  test_IntervalArray.py  test_LabeledIntervalArray.py
wheelhouse/: ailist-2.0.0-cp311-cp311-macosx_13_0_x86_64.whl
(+642 files in other folders)
